--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -24,14 +29,31 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "2.2.0"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+    // Gson Converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    // RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+    // Constraint Layout
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.android.volley:volley:1.1.1'
+    // AppCompat
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    // Annotation processor
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
