--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,11 +58,17 @@ dependencies {
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+//    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+//    // Because RxAndroid releases are few and far between, it is recommended you also
+//    // explicitly depend on RxJava's latest version for bug fixes and new features.
+//    // (see https://github.com/ReactiveX/RxJava/releases for latest 3.x.x version)
+//    implementation 'io.reactivex.rxjava3:rxjava:3.0.2'
+
     // Annotation processors
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
