--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
@@ -20,7 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url "https://oss.jfrog.org/libs-snapshot" }
+        maven { url "https://jitpack.io" }
     }
 }
 
@@ -34,4 +34,5 @@ ext {
     work_version = "2.3.4"
     rxjava_version = "3.0.0"
     retrofit2_version = "2.8.1"
+    yapa_version = "1.2.3"
 }
