--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
     // Retrofit2
     implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
-    // RxJava Androi
+    // RxJava Android
     implementation "io.reactivex.rxjava3:rxandroid:$rxjava_version"
     // RxJava
     implementation "io.reactivex.rxjava3:rxjava:$rxjava_version"
