--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0-alpha06'
     // Youtube Android Player API
     implementation "com.github.tommus:youtube-android-player-api:$yapa_version"
-    // ExpandableTextView Libray
+    // ExpandableTextView Library
     implementation 'com.ms-square:expandableTextView:0.1.4'
     // Paging Library
     implementation "androidx.paging:paging-runtime:$paging_version"
